finish reviews section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   <img src="img/user-1.jpg" alt="user1" class="review__photo" />
                   <div class="review__user-box">
                     <p class="review__user-name">Nick Smith</p>
-                    <p class="review__user-date">Feb 23rd,2020</p>
+                    <p class="review__user-date">Feb 23rd, 2020</p>
                   </div>
                   <div class="review__rating">7.8</div>
                 </figcaption>
@@ -208,11 +208,12 @@
                   <img src="img/user-2.jpg" alt="user1" class="review__photo" />
                   <div class="review__user-box">
                     <p class="review__user-name">Mary Thomas</p>
-                    <p class="review__user-date">Sep 13th,2020</p>
+                    <p class="review__user-date">Sep 13th, 2020</p>
                   </div>
                   <div class="review__rating">9.3</div>
                 </figcaption>
               </figure>
+              <button class="btn-inline">Show all &rarr;</button>
             </div>
           </div>
         </main>
