complete  cta footer

--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
               </figure>
               <button class="btn-inline">Show all &rarr;</button>
             </div>
+
+            <div class="cta">
+              <h2 class="cta__book-now">
+                Good News! We have 4 free room for your selected date!
+              </h2>
+              <button class="btn">
+                <span class="btn__visible">Book Now!</span>
+                <span class="btn__invisible">Only 4 Rooms Left!</span>
+              </button>
+            </div>
           </div>
         </main>
       </div>
